Separate fixtures and expected payloads

--- a/userscript/test/fixtures/sponsored.html
+++ b/userscript/test/fixtures/sponsored.html
@@ -27,7 +27,7 @@
           <div class="_5pbu _3ccb" data-gt="{&quot;type&quot;:&quot;click2canvas&quot;,&quot;fbsource&quot;:703,&quot;ref&quot;:&quot;nf_generic&quot;}">
             <div class="userContentWrapper _5pa-" role="article" aria-label="Story">
               <div class="_1dwg _1w_m">
-                <span class="_47we"><span id="u_ps_jsonp_3_0_h" class="uiLikePageButton"><button value="1" class="_42ft _4jy0 PageLikeButton _4jy3 _517h _51sy" data-profileid="141727802539968" data-ft="{&quot;type&quot;:28,&quot;tn&quot;:&quot;c&quot;}" data-ownerid="u_ps_jsonp_3_0_h" id="u_ps_jsonp_3_0_j" type="submit"><span class="_47we"><span class="_47we"><span class="_47we"><span class="_47we">Like Page</span></span></span></span></button></span></span>
+                <span class="_47we"><span id="u_ps_jsonp_3_0_h" class="uiLikePageButton"><button value="1" class="_42ft _4jy0 PageLikeButton _4jy3 _517h _51sy" data-profileid="141727802539968" data-ft="{&quot;type&quot;:28,&quot;tn&quot;:&quot;c&quot;}" data-ownerid="u_ps_jsonp_3_0_h" id="u_ps_jsonp_3_0_j" type="submit"><span class="_47we"><span class="_47we"><span class="_47we"><span class="_47we"><span class="_47we"><span class="_47we">Like Page</span></span></span></span></span></span></button></span></span>
 
                 <div class="_5x46">
                   <div class="clearfix _5va3">
